objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>ASCENTIUM_Funding_Likelihood__c</fullName>
        <label>ASCENTIUM Funding Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Management_Territory__c</fullName>
        <formula>CASE(  Developer_Company_Headquarter_Location__c , 
&quot;Alabama&quot;,&quot;Katrina&quot;, 
&quot;Arkansas&quot;,&quot;Katrina&quot;,
&quot;Florida&quot;,&quot;Katrina&quot;,
&quot;Georgia&quot;,&quot;Katrina&quot;,
&quot;Kentucky&quot;,&quot;Katrina&quot;,
&quot;Louisiana&quot;,&quot;Katrina&quot;,
&quot;New York&quot;,&quot;Katrina&quot;,
&quot;Maryland&quot;,&quot;Katrina&quot;,
&quot;Mississippi&quot;,&quot;Katrina&quot;,
&quot;North Carolina&quot;,&quot;Katrina&quot;,
&quot;South Carolina&quot;,&quot;Katrina&quot;,
&quot;Tennessee&quot;,&quot;Katrina&quot;,
&quot;Virginia&quot;,&quot;Katrina&quot;,
&quot;Washington DC&quot;,&quot;Katrina&quot;,
&quot;West Virginia&quot;,&quot;Katrina&quot;,
&quot;Virgin Islands, U.S.&quot;,&quot;Katrina&quot;,
&quot;US Virgin Islands&quot;,&quot;Katrina&quot;,
&quot;Puerto Rico&quot;,&quot;Katrina&quot;,
&quot;Guam&quot;,&quot;Katrina&quot;,
&quot;Connecticut&quot;,&quot;Katrina&quot;, 
&quot;Delaware&quot;,&quot;Katrina&quot;,
&quot;Maine&quot;,&quot;Katrina&quot;,
&quot;Massachusetts&quot;,&quot;Katrina&quot;,
&quot;New Hampshire&quot;,&quot;Katrina&quot;,
&quot;New Jersey&quot;,&quot;Katrina&quot;,
&quot;Ohio&quot;,&quot;Colangelo&quot;,
&quot;Pennsylvania&quot;,&quot;Katrina&quot;,
&quot;Rhode Island&quot;,&quot;Katrina&quot;,
&quot;Vermont&quot;,&quot;Katrina&quot;,
&quot;Quebec&quot;,&quot;Colangelo&quot;,
&quot;Newfoundland&quot;,&quot;Colangelo&quot;,
&quot;Prince Edward Island&quot;,&quot;Colangelo&quot;,
&quot;New Brunswick&quot;,&quot;Colangelo&quot;,
&quot;Nova Scotia&quot;,&quot;Colangelo&quot;,
&quot;Illinois&quot;,&quot;Colangelo&quot;,
&quot;Indiana&quot;,&quot;Colangelo&quot;,
&quot;Iowa&quot;,&quot;Colangelo&quot;,
&quot;Kansas&quot;,&quot;Colangelo&quot;,
&quot;Michigan&quot;,&quot;Colangelo&quot;,
&quot;Minnesota&quot;,&quot;Colangelo&quot;,
&quot;Missouri&quot;,&quot;Colangelo&quot;,
&quot;Nebraska&quot;,&quot;Colangelo&quot;,
&quot;North Dakota&quot;,&quot;Roger&quot;,
&quot;Oklahoma&quot;,&quot;Colangelo&quot;,
&quot;South Dakota&quot;,&quot;Roger&quot;,
&quot;Texas&quot;,&quot;Colangelo&quot;,
&quot;Wisconsin&quot;,&quot;Colangelo&quot;,
&quot;Ontario&quot;,&quot;Katrina&quot;,
&quot;Manitoba&quot;,&quot;Roger&quot;,
&quot;Nunavut&quot;,&quot;Roger&quot;,
&quot;Northwest Territories&quot;,&quot;Roger&quot;,
&quot;Alaska&quot;,&quot;Roger&quot;,
&quot;Arizona&quot;,&quot;Roger&quot;,
&quot;California&quot;,&quot;Roger&quot;,
&quot;Colorado&quot;,&quot;Roger&quot;,
&quot;Hawaii&quot;,&quot;Roger&quot;,
&quot;Idaho&quot;,&quot;Roger&quot;,
&quot;Montana&quot;,&quot;Roger&quot;,
&quot;Nevada&quot;,&quot;Roger&quot;,
&quot;New Mexico&quot;,&quot;Roger&quot;,
&quot;Oregon&quot;,&quot;Roger&quot;,
&quot;Utah&quot;,&quot;Roger&quot;,
&quot;Washington&quot;,&quot;Roger&quot;,
&quot;Wyoming&quot;,&quot;Roger&quot;,
&quot;British Columbia&quot;,&quot;Roger&quot;,
&quot;Alberta&quot;,&quot;Roger&quot;,
&quot;Yukon&quot;,&quot;Roger&quot;,
&quot;Saskatchewan&quot;,&quot;Roger&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Management Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Territory__c</fullName>
        <label>Account Manager Territory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Services_Notes__c</fullName>
        <description>Enter any notes relative to the Account Services function</description>
        <inlineHelpText>Enter any notes relative to the Account Services function</inlineHelpText>
        <label>Account Services Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Services_Referral__c</fullName>
        <label>Services Handoff</label>
        <picklist>
            <picklistValues>
                <fullName>Matthew Armstrong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerin LeClaire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Subscription_Type__c</fullName>
        <label>Account Subscription Type</label>
        <picklist>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Add_l_Annual_Fees__c</fullName>
        <description>Add all other fees (data, B2B, customizations)</description>
        <inlineHelpText>All other fees</inlineHelpText>
        <label>Add&apos;l Annual Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Pro_Reports_Monthly_Fees__c</fullName>
        <inlineHelpText>Enter any $ for additional reports that are monthly fees</inlineHelpText>
        <label>Additional Pro Reports- Monthly Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement_Expiration_Date__c</fullName>
        <inlineHelpText>Enter the date that the pricing/agreement expires</inlineHelpText>
        <label>Agreement Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Issue_Date__c</fullName>
        <inlineHelpText>Enter the date the agreement is issued</inlineHelpText>
        <label>Agreement Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Signer_Email__c</fullName>
        <label>Developer Agreement Signer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agreement_Signer_Name__c</fullName>
        <label>Developer Agreement Signer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Signer_Phone__c</fullName>
        <label>Developer Agreement Signer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Agreement_Signer_Title__c</fullName>
        <label>Developer Agreement Signer Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Signer_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Integration only field used to suppress unwanted trigger execution. Do not edit.</description>
        <inlineHelpText>Integration only field used to suppress unwanted trigger execution. Do not edit.</inlineHelpText>
        <label>Developer Agreement Signer Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Data_Fees__c</fullName>
        <inlineHelpText>Enter the annual meter and B2B fees</inlineHelpText>
        <label>Annual Data Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Program_Fees__c</fullName>
        <label>Annual Program Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Project_Fee__c</fullName>
        <inlineHelpText>annual project or marketing fees</inlineHelpText>
        <label>Annual Project Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Project_Savings__c</fullName>
        <label>Annual Project Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue2__c</fullName>
        <description>&lt;$2.5M
$2.5M-$4.9M
$5M-$9.9M
$10M+</description>
        <inlineHelpText>Select the respective tier that best represents company&apos;s annual revenue</inlineHelpText>
        <label>Annual Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;$2.5M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2.5M-$4.9M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5M-$9.9M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10M+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Fee__c</fullName>
        <label>Application Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Discounts__c</fullName>
        <label>Approved Discounts/Applied Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Association_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the respective Program Partner or Concierge Partner to which the Program Affiliate or Concierge Vendor is associated</inlineHelpText>
        <label>Affiliation/Partner</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>opportunities</relationshipLabel>
        <relationshipName>accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Project_Size__c</fullName>
        <inlineHelpText>Enter the average dollar amount that reflects a Marketing Partner&apos;s average deal size or Project Financing Project size</inlineHelpText>
        <label>Average Project Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B2B_Integrated_Connection_Monthly_Fees__c</fullName>
        <inlineHelpText>Enter the $ for the ongoing monthly fees to support the B2B integrated connection</inlineHelpText>
        <label>B2B Integrated Connection-Monthly Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B2B_Integration_Fee__c</fullName>
        <inlineHelpText>Enter the one time $ for the B2B integration costs</inlineHelpText>
        <label>B2B Integration Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Barrier_to_Close_Notes__c</fullName>
        <label>Barrier to Close Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower_Credit_App_Last_Activity_Date__c</fullName>
        <label>Borrower_Credit App Last Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Borrower_Credit_App_Start_Date__c</fullName>
        <label>Borrower Credit App Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Borrower_Credit_Application_Send_Date__c</fullName>
        <inlineHelpText>Enter the date the credit application is sent to the borrower for the related project</inlineHelpText>
        <label>Borrower_Credit Application Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Borrower_Credit_application_received__c</fullName>
        <label>Borrower_Credit Application Rec&apos;d Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Borrower_Finance_Statement_Received_Date__c</fullName>
        <inlineHelpText>Enter the date that the borrower&apos;s financial statements were received</inlineHelpText>
        <label>Borrower Finance Statement Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Borrower_Finance_Statements_Request_Date__c</fullName>
        <inlineHelpText>Enter the date that Noesis asked for  the Borrower Finance Statements</inlineHelpText>
        <label>Borrower Finance Statements Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Borrower_Loan_Approval_Date__c</fullName>
        <label>Borrower Loan Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Borrower_Loan_Doc_Timing__c</fullName>
        <formula>Loan_Docs_Received_Date__c - Loan_Docs_Sent_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Borrower Loan Doc TurnAround</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Borrower_M_V_Fees__c</fullName>
        <label>Borrower M&amp;V Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Borrower_Project_Discussion_Conducted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the Project Developer has indicated that they have completed discussions with the borrower about budget needs for this project</inlineHelpText>
        <label>Borrower Budget Discussion Conducted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Borrower_Term_Sheet_Received_Date__c</fullName>
        <label>Borrower Term Sheet Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Borrower_Type__c</fullName>
        <label>Borrower Type</label>
        <picklist>
            <picklistValues>
                <fullName>Non Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Public Sector (Outside of Muni)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private College/University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate Holding Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant with Lease Term Beyond Financing Term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Need__c</fullName>
        <inlineHelpText>Select the respective need(s) that accurately convey the reason for a Pro Solution</inlineHelpText>
        <label>Business Need</label>
        <picklist>
            <picklistValues>
                <fullName>Measurement and Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Project Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Align Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standardized Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automating Internal Processes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposals</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>List of business types that enables Noesis Sales to quantify opportunities sitting within specific business types/sectors.</description>
        <inlineHelpText>Multiple Select List - Choose one or more</inlineHelpText>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>ESCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Consultant Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design/Build EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor/Manufacture/Vendor/Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Energy/Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Management/Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial/Industrial/Office Bldg/Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public/State/Gov&apos;t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services/Lending/Broker</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Buy_Down_Option__c</fullName>
        <label>Buy Down Option</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Pays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer Pays</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Buy_Down_Rate__c</fullName>
        <label>Buy Down Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Buy_Side__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if a buy side opportunity</inlineHelpText>
        <label>Buy Side</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIF_Funding_Likelihood__c</fullName>
        <label>CIF Funding Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_Positive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if the project is cash flow positive</inlineHelpText>
        <label>Cash Flow Positive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <description>This is the reason the opportunity is marked as Closed-Lost.</description>
        <inlineHelpText>Choose which reason best applies to why the opportunity is Closed-Lost</inlineHelpText>
        <label>Closed-Lost Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Budget Constraints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business re-defining Products/Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Re-org/Downsize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decided not to pursue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not believe Noesis value out weighs cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not need financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Focused on Growing Residential Segment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of understanding as to how to incorporate our product into their process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noesis does not have right target audience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noesis Unable to Finance ECM Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No internal resources to manage new process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reached Max Attempts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>StartUp-Focused on Business Launch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Never__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed-Never</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Headquarter_State__c</fullName>
        <label>Company Headquarter State</label>
        <picklist>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Dakota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <inlineHelpText>Select the company size that best represent the company</inlineHelpText>
        <label>Company Size</label>
        <picklist>
            <picklistValues>
                <fullName>1-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,001+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_App_Received_to_Close_Date__c</fullName>
        <formula>CloseDate - Borrower_Credit_application_received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit App Received to Close Date Timing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_App_Received_to_Sent_Conversion__c</fullName>
        <formula>Credit_App_Recveied_Count__c / Credit_App_Sent_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit App Received to Sent Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Credit_App_Recipient_Email__c</fullName>
        <label>Credit App Recipient Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_App_Recipient_Name__c</fullName>
        <label>Credit App Recipient Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_App_Recveied_Count__c</fullName>
        <label>Credit App Received Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_App_Sent_Count__c</fullName>
        <label>Credit App Sent Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_App_Sent_to_Close_Date__c</fullName>
        <formula>CloseDate - Borrower_Credit_Application_Send_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit App Sent to Close Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_App_Timing__c</fullName>
        <formula>Borrower_Credit_application_received__c - Borrower_Credit_Application_Send_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit App TurnAround</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Approval_Amount__c</fullName>
        <label>Credit Approval Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Decision_TurnAround__c</fullName>
        <formula>Lender_Credit_Decision_Date__c - Lender_RFQ_Submittal_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Decision TurnAround</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Ranking__c</fullName>
        <label>Credit Ranking</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <label>Credit Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Screen_Date__c</fullName>
        <label>Credit Screen Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Project_Win_Rate__c</fullName>
        <inlineHelpText>Enter the current project win rate prior to using our proposal/financing solution</inlineHelpText>
        <label>Current Project Win Rate</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Solution__c</fullName>
        <description>This is how the prospect currently solves the problem that we solve.</description>
        <inlineHelpText>This is how the prospect currently solves the problem that we solve.</inlineHelpText>
        <label>Current Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Fees__c</fullName>
        <inlineHelpText>Add relative custom fees resulting from customization</inlineHelpText>
        <label>Custom Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Offerings__c</fullName>
        <description>Enter the # of custom offerings requested to be created by the partner</description>
        <inlineHelpText>Enter the # of custom offerings requested to be created by the partner</inlineHelpText>
        <label># Custom Offerings/Content-Promo Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Report_Fees__c</fullName>
        <inlineHelpText>Enter any additional fees for setup fees for reports</inlineHelpText>
        <label>Custom Report Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Type__c</fullName>
        <label>Customer Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>TR=Transactional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT=Long Term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Services_End_Date__c</fullName>
        <description>This date designates the date that the customer&apos;s NDS will end. This date will typically be 12 months after the PRO Data Services Start Date.</description>
        <label>Data Services End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delayed_Stage_Reason__c</fullName>
        <description>A list of reasons used to communicate the reason why a sale would be delayed and placed back to a lower probability percentage as a result of the delay</description>
        <inlineHelpText>Select a Delay Reason</inlineHelpText>
        <label>Delayed Stage Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Budget Decision Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Contact Left Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Took Extended Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Align with Product Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Re-Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Noesis New Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reached Max Attempts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Developer_Borrower_Present_Date__c</fullName>
        <label>Developer Borrower Present Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Developer_Company_Headquarter_Location__c</fullName>
        <label>Developer Company Headquarter Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>